--- a/src/index.css
+++ b/src/index.css
@@ -59,10 +59,10 @@ input[type="number"] {
     @apply bg-gray-200 rounded-md md:p-sm-ly-pad p-0.5 flex flex-col gap-sm;
   }
   .tab {
-    @apply text-black flex-1 lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold lg:rounded-md rounded-1 outline-none;
+    @apply text-black flex-1 lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold lg:rounded-md rounded-1 outline-none md:cursor-pointer cursor-none;
   }
   .underline-tab {
-    @apply text-black text-nowrap lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold;
+    @apply text-black text-nowrap lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold md:cursor-pointer cursor-none;
   }
 }
 
@@ -144,6 +144,9 @@ input[type="number"] {
   }
   .menu-width {
     @apply xl:w-xl-menu-width lg:w-lg-menu-width md:w-md-menu-width w-sm-menu-width;
+  }
+  .alert-gap{
+    @apply flex flex-col md:gap-sm gap-xs
   }
 }
 
