--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,9 @@ input[type="number"] {
   .layout-pad {
     @apply lg:p-ly-pad md:p-md-ly-pad p-sm-ly-pad;
   }
+  .cursor{
+    @apply md:cursor-pointer cursor-none
+  }
 
   .flex-between {
     @apply flex justify-between;
