--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@ input[type="number"] {
     @apply capitalize small-btn-border-radius cursor w-full text-white bg-black hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium border-gray-300 text-sm px-5 py-2.5 text-center;
   }
   .profile-edit-container {
-    @apply bg-gray-200 rounded-md md:p-sm-ly-pad p-0.5 flex flex-col md:gap-0.10 gap-0.8;
+    @apply bg-gray-200 lg:rounded-sm rounded-xs md:p-sm-ly-pad p-0.5 flex flex-col md:gap-0.10 gap-0.8;
   }
   .tab {
     @apply text-black flex-1 lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold lg:rounded-md rounded-1 outline-none md:cursor-pointer cursor-none;
