--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 img {
   width: 100%;
   height: 100%;
@@ -40,6 +39,9 @@ input[type="number"] {
 
 textarea {
   resize: none;
+}
+.textarea::-webkit-scrollbar {
+  display: none;
 }
 input::placeholder {
   white-space: normal;
@@ -187,7 +189,7 @@ input::placeholder {
     @apply lg:text-base md:text-sm text-xs md:font-extrabold font-bold bg-gray-200;
   }
   .text-input {
-    @apply bg-gray-50 border resize-none text-gray-900  small-btn-border-radius lg:indent-[47px] md:indent-[37px] indent-[30px] focus:ring-primary focus:border-primary block xl:text-xl lg:text-lg md:text-base text-sm md:font-extrabold font-bold w-full md:p-[7px] p-[5px] placeholder:text-gray-400;
+    @apply bg-gray-50 border resize-none text-gray-900  small-btn-border-radius lg:indent-[47px] md:indent-[37px] indent-[30px] focus:ring-primary focus:border-primary block xl:text-xl lg:text-lg md:text-base text-sm md:font-extrabold font-bold w-full md:p-[7px] p-[5px] placeholder:text-gray-400 overflow-hidden;
   }
   .text-input-gig{
     @apply border-none outline-none focus:border-none focus:outline-none focus:ring-0 resize-none text-gray-900  block xl:text-base lg:text-sm text-xs md:font-semibold font-medium p-0 cursor placeholder:text-gray-400 w-11/12;
