--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,6 @@ img {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
-
 }
 
 textarea {
@@ -45,8 +44,18 @@ textarea {
 }
 input::placeholder {
   white-space: normal;
-
 }
+
+
+@media screen and (min-width: 768px) {
+  .card-img:hover .ed-btn {
+    bottom: 100% !important;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+  }
+  
+}
+
 @layer base {
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
@@ -191,22 +200,20 @@ input::placeholder {
   .text-input {
     @apply bg-gray-50 border resize-none text-gray-900  small-btn-border-radius lg:indent-[47px] md:indent-[37px] indent-[30px] focus:ring-primary focus:border-primary block xl:text-xl lg:text-lg md:text-base text-sm md:font-extrabold font-bold w-full md:p-[7px] p-[5px] placeholder:text-gray-400 overflow-hidden;
   }
-  .text-input-gig{
+  .text-input-gig {
     @apply border-none outline-none focus:border-none focus:outline-none focus:ring-0 resize-none text-gray-900  block xl:text-base lg:text-sm text-xs md:font-semibold font-medium p-0 cursor placeholder:text-gray-400 w-11/12;
   }
-  .text-input-with-border{
-    @apply border border-primary resize-none text-gray-900  block xl:text-base lg:text-sm text-xs md:font-semibold font-medium md:p-2.5 p-1 small-btn-border-radius cursor placeholder:text-gray-400 w-full focus:ring-primary focus:border-primary ;
+  .text-input-with-border {
+    @apply border border-primary resize-none text-gray-900  block xl:text-base lg:text-sm text-xs md:font-semibold font-medium md:p-2.5 p-1 small-btn-border-radius cursor placeholder:text-gray-400 w-full focus:ring-primary focus:border-primary;
   }
-  .input-gig{
+  .input-gig {
     @apply border border-primary text-primary  placeholder-gray-600  md:text-lg  text-sm small-btn-border-radius focus:ring-primary focus:border-primary capitalize block w-full md:p-2.5 p-1;
-   
   }
-  .gig-btn{
-    @apply bg-black text-white lg:text-base  md:text-sm md:font-bold font-semibold text-xs  lg:py-1 md:py-0.10 py-0.8 md:px-4 px-2 lg:rounded-md md:rounded-sm rounded-xs uppercase md:hover:shadow-2xl shadow-none md:cursor-pointer cursor-none
+  .gig-btn {
+    @apply bg-black text-white lg:text-base  md:text-sm md:font-bold font-semibold text-xs  lg:py-1 md:py-0.10 py-0.8 md:px-4 px-2 lg:rounded-md md:rounded-sm rounded-xs uppercase md:hover:shadow-2xl shadow-none md:cursor-pointer cursor-none;
   }
-  .general-pad{
+  .general-pad {
     @apply lg:p-1 md:p-0.10 p-0.8;
-  
   }
 }
 
