--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ input::placeholder {
 }
 @layer components {
   .container {
-    max-width: 1200px;
+    max-width: 1380px;
     margin: 0 auto;
   }
   .black-btn {
@@ -86,8 +86,11 @@ input::placeholder {
   .tab {
     @apply text-black flex-1 lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold lg:rounded-md rounded-1 outline-none md:cursor-pointer cursor-none;
   }
+  .sub-tab {
+    @apply text-black lg:p-1 md:p-0.10 p-0.5 capitalize lg:text-base md:text-sm text-xs md:font-bold font-semibold md:rounded-[30px] rounded-[20px] outline-none md:cursor-pointer cursor-none;
+  }
   .underline-tab {
-    @apply text-black text-nowrap lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold md:cursor-pointer cursor-none;
+    @apply text-black text-nowrap lg:px-1 md:px-sm-ly-pad px-0.8  lg:py-2 md:py-1 py-0.10 capitalize lg:text-xl md:text-base text-sm md:font-bold font-semibold md:cursor-pointer cursor-none ;  
   }
 }
 
@@ -116,7 +119,7 @@ input::placeholder {
     @apply absolute  top-0 left-0 -translate-y-2/4 lg:ml-2 md:ml-1 ml-4xl capitalize lg:p-4xl md:p-3xl p-2xl  bg-slate-gray leading-none xl:text-lg lg:text-base md:text-sm text-xs xl:font-extrabold lg:font-bold md:font-semibold font-medium md:rounded-xs rounded-xxs;
   }
   .input-lable {
-    @apply block mb-2 md:text-lg  text-sm font-medium text-primary dark:text-green-500 capitalize;
+    @apply block  md:text-lg  text-sm font-medium text-primary dark:text-green-500 capitalize;
   }
   .border {
     @apply border-1 border-solid border-black;
@@ -225,6 +228,12 @@ input::placeholder {
   }
 }
 .tab.react-tabs__tab--selected {
+  @apply bg-black text-white transition-all;
+  animation: fadeIn 0.5s ease;
+
+  /* Adjust the duration and timing function as needed */
+}
+.sub-tab.react-tabs__tab--selected {
   @apply bg-black text-white transition-all;
   animation: fadeIn 0.5s ease;
 
