--- a/src/index.css
+++ b/src/index.css
@@ -249,6 +249,9 @@ input::placeholder {
 
   animation: fadeIn 0.5s ease;
 }
+.react-tabs__tab-panel.react-tabs__tab-panel--selected{
+  @apply h-full
+}
 @keyframes fadeIn {
   0% {
     opacity: 0;
