--- a/src/index.css
+++ b/src/index.css
@@ -303,3 +303,77 @@ input::placeholder {
       stroke: #cc8925;
   }
 }
+
+.paginationBox {
+  display: flex;
+  justify-content: center;
+  margin: 6vmax;
+  flex-wrap: wrap;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  flex-wrap: wrap;
+}
+
+.page-item {
+  background-color: rgb(255, 255, 255);
+  list-style: none;
+  border: 1px solid #101010;
+  padding: 1vmax 1.5vmax;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.page-item:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.page-item:last-child {
+  border-radius: 0 5px 5px 0;
+}
+.page-link {
+  text-decoration: none;
+  font: 300 0.7vmax "Roboto";
+  color: rgb(80, 80, 80);
+  transition: all 0.3s;
+}
+
+.page-item:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+.page-item:hover .page-link {
+  color: #101010;
+}
+
+.pageItemActive {
+  background-color: #101010;
+}
+
+.pageLinkActive {
+  color: white;
+}
+
+@media screen and (max-width: 600px) {
+  .products{
+    /* padding: 0 6vmax; */
+  }
+  .filterBox {
+    width: 20vmax;
+    position: static;
+    margin: auto;
+    height: 100%;
+  }
+
+  .page-link {
+    font: 300 1.7vmax "Roboto";
+  }
+  .category-link {
+    font: 400 1.8vmax "Roboto";
+  }
+  .page-item {
+    padding: 0.5vmax 1.5vmax;
+  }
+}
