--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,25 @@ textarea {
 input::placeholder {
   white-space: normal;
 }
+.custom-scroll::-webkit-scrollbar {
+  width: 07px;
+
+}
+.custom-scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #acacac; 
+  border-radius: 10px;
+  height: 07px;
+
+}
+ 
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #acacac; 
+  border-radius: 10px;
+ 
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #E5E7EB; 
+}
 
 @media screen and (min-width: 768px) {
   .card-img:hover .ed-btn {
@@ -104,7 +123,7 @@ input::placeholder {
 
 @layer utilities {
   .page-container {
-    @apply relative lg:min-h-[calc(100vh-100px)] h-auto m-auto md:min-h-[calc(100vh-80px)] min-h-[calc(100vh-50px)] bg-gray-100;
+    @apply relative lg:min-h-[calc(100vh-122px)] h-auto m-auto md:min-h-[calc(100vh-114px)] min-h-[calc(100vh-50px)] bg-gray-100;
   }
   .page-container-without-bg {
     @apply relative lg:min-h-[calc(100vh-100px)] h-auto m-auto md:min-h-[calc(100vh-80px)] min-h-[calc(100vh-50px)];
