--- a/src/index.css
+++ b/src/index.css
@@ -170,7 +170,7 @@ input::placeholder {
     @apply absolute  top-0 left-0 -translate-y-2/4 lg:ml-2 md:ml-1 ml-4xl capitalize lg:p-4xl md:p-3xl p-2xl  bg-slate-gray leading-none xl:text-lg lg:text-base md:text-sm text-xs md:font-bold font-medium md:rounded-xs rounded-xxs;
   }
   .input-lable {
-    @apply block  lg:text-lg md:text-base   text-sm lg:font-bold md:font-semibold font-medium text-primary  capitalize;
+    @apply block  lg:text-lg md:text-base   text-sm md:font-semibold font-medium text-primary  capitalize;
   }
   .modal-input-label {
     @apply block  md:text-base  text-sm font-medium text-primary  capitalize;
